--- a/LibriVox/StoryBoard/HomePage.storyboard
+++ b/LibriVox/StoryBoard/HomePage.storyboard
@@ -102,33 +102,39 @@
                                             <constraint firstAttribute="height" constant="10" id="ODV-xq-ohU"/>
                                         </constraints>
                                     </progressView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play" translatesAutoresizingMaskIntoConstraints="NO" id="t11-RR-MLT">
-                                        <rect key="frame" x="293" y="135" width="35" height="35"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zUh-ii-HQd" customClass="PlayToggleBtn" customModule="LibriVox" customModuleProvider="target">
+                                        <rect key="frame" x="303" y="145" width="35" height="35"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="35" id="Yk6-aF-0IM"/>
-                                            <constraint firstAttribute="width" constant="35" id="tJI-QO-xgQ"/>
+                                            <constraint firstAttribute="height" constant="35" id="3XQ-Bf-SSI"/>
+                                            <constraint firstAttribute="width" constant="35" id="YWp-Dd-FaG"/>
                                         </constraints>
-                                    </imageView>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Button" image="pause">
+                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration"/>
+                                        </state>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" name="Main Blue Tone"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="C1L-mf-Iv7" secondAttribute="bottom" constant="18" id="4Zp-dd-QL3"/>
+                                    <constraint firstItem="yXE-Yg-jDF" firstAttribute="top" secondItem="zUh-ii-HQd" secondAttribute="bottom" constant="10" id="6J6-Ex-nQ2"/>
                                     <constraint firstItem="O8h-iy-Z5K" firstAttribute="leading" secondItem="oqc-aF-cfm" secondAttribute="leading" constant="15" id="9VL-aJ-s7b"/>
                                     <constraint firstItem="yXE-Yg-jDF" firstAttribute="bottom" secondItem="C1L-mf-Iv7" secondAttribute="bottom" id="Aog-qW-f72"/>
                                     <constraint firstItem="C1L-mf-Iv7" firstAttribute="leading" secondItem="oqc-aF-cfm" secondAttribute="leading" constant="15" id="C13-je-0si"/>
                                     <constraint firstItem="RIy-hr-txU" firstAttribute="leading" secondItem="C1L-mf-Iv7" secondAttribute="trailing" constant="10" id="CqJ-Wb-53f"/>
-                                    <constraint firstAttribute="trailing" secondItem="t11-RR-MLT" secondAttribute="trailing" constant="15" id="Dkq-W4-RdK"/>
                                     <constraint firstItem="z8L-2w-Kh3" firstAttribute="top" secondItem="RIy-hr-txU" secondAttribute="bottom" constant="27" id="G2A-qL-D2W"/>
                                     <constraint firstItem="C1L-mf-Iv7" firstAttribute="top" secondItem="O8h-iy-Z5K" secondAttribute="bottom" constant="18" id="GO6-mw-99q"/>
                                     <constraint firstAttribute="height" constant="218" id="O7Y-z1-oxh"/>
                                     <constraint firstAttribute="trailing" secondItem="RIy-hr-txU" secondAttribute="trailing" constant="15" id="V4K-vb-zK5"/>
                                     <constraint firstItem="dDH-5L-dS0" firstAttribute="top" secondItem="oqc-aF-cfm" secondAttribute="top" constant="20" id="Wvm-jc-Cfq"/>
                                     <constraint firstItem="dDH-5L-dS0" firstAttribute="leading" secondItem="oqc-aF-cfm" secondAttribute="leading" constant="15" id="Yj2-n0-G2a"/>
+                                    <constraint firstItem="zUh-ii-HQd" firstAttribute="leading" secondItem="oqc-aF-cfm" secondAttribute="leading" constant="303" id="aXv-Mg-w0Z"/>
                                     <constraint firstItem="yXE-Yg-jDF" firstAttribute="leading" secondItem="C1L-mf-Iv7" secondAttribute="trailing" constant="10" id="dI6-Sd-h1U"/>
                                     <constraint firstAttribute="trailing" secondItem="yXE-Yg-jDF" secondAttribute="trailing" constant="15" id="e06-UA-4HI"/>
                                     <constraint firstItem="z8L-2w-Kh3" firstAttribute="leading" secondItem="C1L-mf-Iv7" secondAttribute="trailing" constant="10" id="eVP-0L-dkf"/>
                                     <constraint firstItem="RIy-hr-txU" firstAttribute="top" secondItem="C1L-mf-Iv7" secondAttribute="top" id="gaG-UO-EUC"/>
-                                    <constraint firstItem="yXE-Yg-jDF" firstAttribute="top" secondItem="t11-RR-MLT" secondAttribute="bottom" constant="20" id="rVK-Bo-IqN"/>
                                     <constraint firstItem="pxx-Kk-uQi" firstAttribute="leading" secondItem="C1L-mf-Iv7" secondAttribute="trailing" constant="10" id="rdo-Nw-mVh"/>
                                     <constraint firstItem="O8h-iy-Z5K" firstAttribute="top" secondItem="dDH-5L-dS0" secondAttribute="bottom" constant="2" id="sxM-0A-gYQ"/>
                                     <constraint firstItem="pxx-Kk-uQi" firstAttribute="top" secondItem="z8L-2w-Kh3" secondAttribute="bottom" constant="2" id="zZE-K9-rtG"/>
@@ -802,13 +808,14 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="g3y-Fd-V1A"/>
+        <segue reference="Sw7-E8-QYW"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="28187" width="305" height="475"/>
         <image name="ellipsis.circle" catalog="system" width="128" height="123"/>
         <image name="house" catalog="system" width="128" height="104"/>
         <image name="logo" width="400" height="400"/>
+        <image name="pause" width="512" height="512"/>
         <image name="play" width="512" height="512"/>
         <image name="play-button" width="512" height="512"/>
         <namedColor name="Gren Tone">
