--- a/LibriVox/StoryBoard/Library.storyboard
+++ b/LibriVox/StoryBoard/Library.storyboard
@@ -309,7 +309,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeG-1D-zCM" customClass="FavoritesToggleBtn" customModule="LibriVox" customModuleProvider="target">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeG-1D-zCM" customClass="ToggleBtn" customModule="LibriVox" customModuleProvider="target">
                                             <rect key="frame" x="363" y="13" width="25" height="25"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="g8U-6Q-O4i"/>
@@ -320,6 +320,10 @@
                                             <state key="normal">
                                                 <imageReference key="image" image="star" catalog="system" symbolScale="medium"/>
                                             </state>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="image" keyPath="imgNotSelected" value="star"/>
+                                                <userDefinedRuntimeAttribute type="image" keyPath="imgSelected" value="starOn"/>
+                                            </userDefinedRuntimeAttributes>
                                         </button>
                                     </subviews>
                                     <constraints>
@@ -458,11 +462,6 @@
             <point key="canvasLocation" x="983.96946564885491" y="-2.1126760563380285"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="eeG-1D-zCM">
-            <size key="intrinsicContentSize" width="30" height="34"/>
-        </designable>
-    </designables>
     <inferredMetricsTieBreakers>
         <segue reference="6q9-2R-TJS"/>
     </inferredMetricsTieBreakers>
@@ -470,7 +469,9 @@
         <image name="books.vertical" catalog="system" width="128" height="107"/>
         <image name="books.vertical.fill" catalog="system" width="128" height="110"/>
         <image name="play" width="512" height="512"/>
+        <image name="star" width="512" height="512"/>
         <image name="star" catalog="system" width="128" height="116"/>
+        <image name="starOn" width="512" height="512"/>
         <namedColor name="AccentColor">
             <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
